style: ensure responsive design on mobile

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,11 +2,12 @@
 <html lang="en">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     {% include styles.html %}
     {% seo %}
 </head>
 
-<body>
+<body class="p-3">
     {% include darkmode_toggle.html %}
     {% include header.html %}
     {% include navbar.html %}
