content: minor SEO improvements

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
                 {{ site.title }}</a>
         </div>
         <div>
-            <span class="text-body-secondary">&copy 2020-{{ site.time | date:"%Y" }} <a class="text-body-secondary"
+            <span class="text-body-secondary">&copy; 2020-{{ site.time | date:"%Y" }} <a class="text-body-secondary"
                     href="mailto:{{ site.email }}">{{site.author}}</a>, <a class="text-body-secondary"
                     href="{{ '/colophon/' | relative_url }}">All
                     Rights
