--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="row">
-    <div class="col-sm">
-        <img class="rounded w-100" src="{{ '/assets/img/hero-bg.webp' | prepend: site.baseurl}}" />
+    <div class="col-sm mb-3 mb-sm-0">
+        <img class="rounded w-100" src="{{ '/assets/img/hero-bg.webp' | prepend: site.baseurl}}" alt="Portrait of Shinwoo"/>
     </div>
     <div class="col-sm">
         <div>
