style: install Bootstrap via NPM
Modify build pipeline to install Bootstrap using NPM before building
site.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,7 +4,7 @@
 
 $primary: #a00000;
 
-@import "bootstrap/bootstrap";
+@import "bootstrap";
 @import "code_highlight";
 
 @media screen and (min-width: 800px){
