content: add alt links for header and footer

--- a/_includes/darkmode_toggle.html
+++ b/_includes/darkmode_toggle.html
@@ -1,3 +1,10 @@
 <div class="text-end">
-    <a class="text-decoration-none" href='#' id='theme-toggle'><i class="fa-solid" id="theme-toggle-content"></i></a>
+  <button
+    class="btn h6 text-decoration-none"
+    href="#"
+    alt="Button to toggle dark mode"
+    id="theme-toggle"
+  >
+    <i class="fa-solid" id="theme-toggle-content"></i>
+  </button>
 </div>
