--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,26 +1,25 @@
 --- 
 # jekyll requires front matter in main scss file to compile it to css
 --- 
-
 $primary: #a00000;
 
 @import "bootstrap";
 @import "code_highlight";
 
-@media screen and (min-width: 1140px){
-  body{
+@media screen and (min-width: 1140px) {
+  body {
     max-width: 50vw;
     margin: 0 auto;
     padding: 1em;
-  }  
+  }
 }
 
-@media screen and (min-width: 960px) and (max-width: 1140px){
-  body{
+@media screen and (min-width: 960px) and (max-width: 1140px) {
+  body {
     max-width: 75vw;
     margin: 0 auto;
     padding: 1em;
-  }  
+  }
 }
 
 .nav-link-current {
@@ -43,11 +42,17 @@ $primary: #a00000;
 
 .headshot {
   @extend .rounded;
-  @extend .w-75; 
 }
-@media screen and (min-width: 540px){
-  .headshot
-    {
-      float: right;
-    }
+
+@media screen and (max-width: 540px) {
+  .headshot {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 540px) {
+  .headshot {
+    width: 75%;
+    float: right;
+  }
 }
