--- a/_includes/darkmode_toggle.html
+++ b/_includes/darkmode_toggle.html
@@ -1,10 +1,5 @@
 <div class="text-end">
-  <button
-    class="btn h6 text-decoration-none"
-    href="#"
-    alt="Button to toggle dark mode"
-    id="theme-toggle"
-  >
-    <i class="fa-solid" id="theme-toggle-content"></i>
+  <button class="btn h6 text-decoration-none" href="#" aria-label="Button to toggle dark mode" id="theme-toggle">
+    <i class="fa-solid" id="theme-toggle-content" aria-label="Toggle Dark/Light Mode"></i>
   </button>
 </div>
