--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,7 @@
   <hr />
   <div class="d-flex flex-wrap justify-content-between align-items-center">
     <div>
-      <a
-        class="text-decoration-none autography display-6 mt-5"
-        href="{{ '/' | relative_url }}"
-      >
+      <a class="text-decoration-none autography display-6 mt-5" href="{{ '/' | relative_url }}">
         {{ site.title }}
       </a>
     </div>
@@ -22,25 +19,16 @@
       </span>
     </div>
     <div class="">
-      <a
-        class="text-decoration-none"
-        href="https://twitter.com/{{ site.twitter_username }}"
-        alt="Hyperlink to Shinwoo's X (Twitter) profile"
-      >
+      <a class="text-decoration-none" href="https://twitter.com/{{ site.twitter_username }}"
+        aria-label="Hyperlink to Shinwoo's X (Twitter) profile">
         <i class="fa-brands fa-x-twitter"></i>
       </a>
-      <a
-        class="text-decoration-none"
-        href="https://github.com/{{ site.github_username }}"
-        alt="Hyperlink to Shinwoo's GitHub profile"
-      >
+      <a class="text-decoration-none" href="https://github.com/{{ site.github_username }}"
+        aria-label="Hyperlink to Shinwoo's GitHub profile">
         <i class="fa-brands fa-github"></i>
       </a>
-      <a
-        class="text-decoration-none"
-        href="https://linkedin.com/in/{{ site.linkedin_username }}"
-        alt="Hyperlink to Shinwoo's LinkedIn profile"
-      >
+      <a class="text-decoration-none" href="https://linkedin.com/in/{{ site.linkedin_username }}"
+        aria-label="Hyperlink to Shinwoo's LinkedIn profile">
         <i class="fa-brands fa-linkedin-in"></i>
       </a>
     </div>
