--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,12 @@
 <header class="row">
-    <div class="col-sm mb-sm-0">
-        <img class="headshot" src="{{ '/assets/img/hero-bg.webp' | prepend: site.baseurl}}" alt="Portrait of Shinwoo" />
+    <div class="col-sm mb-sm-0 w-50 w-sm-100">
+        <img class="headshot" sizes="(max-width: 1400px) 100vw, 1400px" srcset="
+                {{'/assets/img/profile-picture/profile,w_200.webp 200w' | prepend: site.baseurl }},
+                {{'/assets/img/profile-picture/profile,w_868.webp 868w' | prepend: site.baseurl }},
+                {{'/assets/img/profile-picture/profile,w_1376.webp 1376w' | prepend: site.baseurl }},
+                {{'/assets/img/profile-picture/profile,w_1400.webp 1400w' | prepend: site.baseurl }}"
+            src="{{'/assets/img/profile-picture/profile,w_1400.webp 1400w' | prepend: site.baseurl }}"
+            alt="Portrait of Shinwoo">
     </div>
     <div class="col-sm">
         <div>
