style: refactor custom bootstrap styling

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="row">
-    <div class="col-sm mb-sm-0 w-50 w-sm-100">
+    <div class="col-sm mb-sm-0">
         <img class="headshot" sizes="(max-width: 1400px) 100vw, 1400px" srcset="
                 {{'/assets/img/profile-picture/profile,w_200.webp 200w' | prepend: site.baseurl }},
                 {{'/assets/img/profile-picture/profile,w_868.webp 868w' | prepend: site.baseurl }},
