--- a/_sass/_boostrap_custom.scss
+++ b/_sass/_boostrap_custom.scss
@@ -10,7 +10,7 @@ $h3-font-size: $font-size-base * 1.35;
 $h4-font-size: $font-size-base * 1.25;
 $h5-font-size: $font-size-base * 1.15;
 $h6-font-size: $font-size-base;
-$font-family-sans-serif: "Helvetica Neue", HelveticaNeue, "TeX Gyre Heros", TeXGyreHeros, FreeSans, "Nimbus Sans L", "Liberation Sans", Helvetica, Arial, sans-serif;
+$font-family-sans-serif: "Helvetica Neue", HelveticaNeue, Helvetica, sans-serif;
 /*******************
 * Import Bootstrap *
 ********************/
