--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
 <div class="text-center">
-    <hr />
+  <hr class="border border-secondary opacity-100 mb-2" />
     {% for link in site.nav %}
     <a class="text-decoration-none {% if page.url == link.url %}nav-link-current{% endif -%}"
         href="{{ link.url | prepend: site.baseurl }}">
@@ -8,5 +8,5 @@
     <span> | </span>
     {%- endunless -%}
     {% endfor %}
-    <hr />
+    <hr class="border border-secondary opacity-100 mt-2" />
 </div>
