--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,15 +4,15 @@
 @import "boostrap_custom";
 @import "code_highlight";
 
-@media screen and (min-width: 1140px) {
+@media screen and (min-width: 1400px) {
   body {
-    max-width: 45vw;
+    max-width: 55vw;
     margin: 0 auto;
     padding: 1em;
   }
 }
 
-@media screen and (min-width: 960px) and (max-width: 1140px) {
+@media screen and (min-width: 960px) and (max-width: 1400px) {
   body {
     max-width: 75vw;
     margin: 0 auto;
@@ -65,6 +65,15 @@ blockquote {
 }
 
 a {
+  @extend .text-body;
   @extend .link-underline-opacity-25;
-  @extend .link-underline-opacity-100-hover;
+}
+
+a:hover {
+  @extend .text-secondary;
+  @extend .link-underline-opacity-100;
+}
+
+thead tr th {
+  @extend .table-secondary;
 }
