chore: include Bootstrap JS

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,6 +1,6 @@
 <script src="{% link /assets/js/darkmode_toggle.js %}"></script>
 <script src="https://kit.fontawesome.com/ad13315ac8.js" crossorigin="anonymous"></script>
-
+<script src="{% link /assets/js/bootstrap.bundle.min.js %}"></script>
 {% if site.google_analytics and jekyll.environment == 'production' %}
 {% include analytics.html %}
 {% endif %}
