content: remove contact me page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
             University of Pittsburgh
         </p>
         <p>
-            <a class="text-decoration-none" href="mailto:{{ site.email }}">{{ site.email }}</a>
+            <a class="text-decoration-none" href="mailto:{{ site.email }}"><code>{{ site.email }}</code></a>
             <br />
             <a class="text-decoration-none" href="https://twitter.com/{{ site.twitter_username }}">
                 <i class="fa-brands fa-x-twitter"></i> {{ site.twitter_username }}
