content: reorganize pages to _pages directory

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,12 +10,8 @@
       <span class="text-body-secondary">
         &copy; 2020-{{ site.time | date:"%Y" }}
         <a class="text-body-secondary" href="mailto:{{ site.email }}">
-          {{site.author}}
-        </a>
-        ,
-        <a class="text-body-secondary" href="{{ '/colophon/' | relative_url }}">
-          All Rights Reserved.
-        </a>
+          {{site.author}}</a>,
+        All Rights Reserved.
       </span>
     </div>
     <div class="">
