--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,15 +22,15 @@
             <a class="text-decoration-none" href="mailto:{{ site.email }}"><code>{{ site.email }}</code></a>
             <br />
             <a class="text-decoration-none" href="https://twitter.com/{{ site.twitter_username }}">
-                <i class="fa-brands fa-x-twitter"></i> {{ site.twitter_username }}
+                <i class="fa-brands fa-x-twitter"></i> <code>{{ site.twitter_username }}</code>
             </a>
             <br />
             <a class="text-decoration-none" href="https://github.com/{{ site.github_username }}">
-                <i class="fa-brands fa-github"></i> {{ site.github_username }}
+                <i class="fa-brands fa-github"></i> <code>{{ site.github_username }}</code>
             </a>
             <br />
             <a class="text-decoration-none" href="https://linkedin.com/in/{{ site.linkedin_username }}">
-                <i class="fa-brands fa-linkedin-in"></i> {{ site.linkedin_username }}
+                <i class="fa-brands fa-linkedin-in"></i> <code>{{ site.linkedin_username }}</code>
             </a>
         </p>
     </div>
