content: add keybase.io link to header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,6 +32,10 @@
             <a class="text-decoration-none" href="https://linkedin.com/in/{{ site.linkedin_username }}">
                 <i class="fa-brands fa-linkedin-in"></i> <code>{{ site.linkedin_username }}</code>
             </a>
+            <br />
+            <a class="text-decoration-none" href="https://keybase.io/{{ site.keybase_username }}">
+                <i class="fa-brands fa-keybase"></i> <code>{{ site.keybase_username }}</code>
+            </a>
         </p>
     </div>
 </header>
