--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -82,3 +82,19 @@ thead tr th {
 html {
   scroll-behavior: smooth;
 }
+@keyframes fade {
+  from { opacity: 1.0; }
+  50% { opacity: 0.5; }
+  to { opacity: 1.0; }
+}                                                                                                                                                                                                                                  
+
+@-webkit-keyframes fade {
+  from { opacity: 1.0; }
+  50% { opacity: 0.5; }
+  to { opacity: 1.0; }
+}
+
+.blink {
+animation:fade 1000ms infinite;
+-webkit-animation:fade 1000ms infinite;
+}
