--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,31 @@
 <header class="row">
   <div class="col-sm mb-sm-0">
     <img
-      class="headshot"
-      sizes="(max-width: 1400px) 100vw, 1400px"
       srcset="
-                {{'/assets/img/profile-picture/profile,w_200.webp 200w' | prepend: site.baseurl }},
-                {{'/assets/img/profile-picture/profile,w_868.webp 868w' | prepend: site.baseurl }},
-                {{'/assets/img/profile-picture/profile,w_1376.webp 1376w' | prepend: site.baseurl }},
-                {{'/assets/img/profile-picture/profile,w_1400.webp 1400w' | prepend: site.baseurl }}"
-      src="{{'/assets/img/profile-picture/profile,w_1400.webp 1400w' | prepend: site.baseurl }}"
-      alt="Portrait of Shinwoo"
+        {{ '/assets/img/profile-picture/profile-50w.avif 50w' | prepend:site.baseurl }},
+        {{ '/assets/img/profile-picture/profile-150w.avif 150w' | prepend:site.baseurl }},
+        {{ '/assets/img/profile-picture/profile-200w.avif 200w' | prepend:site.baseurl }},
+        {{ '/assets/img/profile-picture/profile-300w.avif 300w' | prepend:site.baseurl }},
+        {{ '/assets/img/profile-picture/profile-350w.avif 350w' | prepend:site.baseurl }},
+        {{ '/assets/img/profile-picture/profile-400w.avif 400w' | prepend:site.baseurl }},
+        {{ '/assets/img/profile-picture/profile-500w.avif 500w' | prepend:site.baseurl }},
+        {{ '/assets/img/profile-picture/profile-800w.avif 800w' | prepend:site.baseurl }},
+        {{ '/assets/img/profile-picture/profile,original.webp 1200w' | prepend: site.baseurl }}"
+      sizes="
+        (max-width: 50px) 50px,
+        (max-width: 150px) 150px,
+        (max-width: 200px) 200px,
+        (max-width: 300px) 300px,
+        (max-width: 350px) 350px
+        (max-width: 400px) 400px,
+        (max-width: 500px) 500px,
+        (max-width: 1200px) 800px,
+        (max-width: 1201px) 1200px"
+      src="{{'/assets/img/profile-picture/profile,original.webp' | prepend: site.baseurl }}"
+      alt="Portrait of Shinwoo Kim"
+      class="headshot"
+      loading="lazy"
+      decoding="async"
     />
   </div>
   <div class="col-sm">
