--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -33,20 +33,18 @@
 </script>
 {% endif %}
 
-{% if page.include contains "bs-tooltip" %}
+{%- if page.include contains "bs-tooltip" -%}
 <script>
   const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
   const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
 </script>
-{% endif %}
-
-
-{% if page.include contains "cal-cs449" %}
+{%- endif -%}
+{%- if page.include contains "cal-cs449" -%}
 <!-- Cal element-click embed code begins -->
-<script type="text/javascript">
+<script>
     (function (C, A, L) { let p = function (a, ar) { a.q.push(ar); }; let d = C.document; C.Cal = C.Cal || function () { let cal = C.Cal; let ar = arguments; if (!cal.loaded) { cal.ns = {}; cal.q = cal.q || []; d.head.appendChild(d.createElement("script")).src = A; cal.loaded = true; } if (ar[0] === L) { const api = function () { p(api, arguments); }; const namespace = ar[1]; api.q = api.q || []; if (typeof namespace === "string") { cal.ns[namespace] = cal.ns[namespace] || api; p(cal.ns[namespace], ar); p(cal, ["initNamespace", namespace]); } else p(cal, ar); return; } p(cal, ar); }; })(window, "https://app.cal.com/embed/embed.js", "init");
   Cal("init", "cs0449", { origin: "https://cal.com" });
   Cal.ns.cs0449("ui", { "styles": { "branding": { "brandColor": "#000000" } }, "hideEventTypeDetails": false, "layout": "column_view" });
 </script>
 <!-- Cal element-click embed code ends -->
-{% endif %}
+{%- endif -%}
