--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
 
     {% seo %}
     <meta name="google-site-verification" content="e1xnIMrmu01RD3c5tiz0v75hhIJQZciraWGrtxtUYhc" />
+    <link rel="me" href="https://discuss.systems/@shinwoo">
 </head>
 
 <body class="p-3">
