--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,8 @@
+{% if layout.header_style == "full" %}
 <header class="row">
-  <div class="col-sm mb-sm-0">
-    <img srcset="
+    <div class="col-sm mb-sm-0">
+        <img
+            srcset="
         {{ '/assets/img/profile-picture/profile-50w.avif 50w' | prepend:site.baseurl }},
         {{ '/assets/img/profile-picture/profile-150w.avif 150w' | prepend:site.baseurl }},
         {{ '/assets/img/profile-picture/profile-200w.avif 200w' | prepend:site.baseurl }},
@@ -10,8 +12,11 @@
         {{ '/assets/img/profile-picture/profile-500w.avif 500w' | prepend:site.baseurl }},
         {{ '/assets/img/profile-picture/profile-800w.avif 800w' | prepend:site.baseurl }},
         {{ '/assets/img/profile-picture/profile,original.webp 1200w' | prepend: site.baseurl }}"
-      src="{{'/assets/img/profile-picture/profile,original.webp' | prepend: site.baseurl }}" class="headshot"
-      loading="lazy" decoding="async" sizes="
+            src="{{'/assets/img/profile-picture/profile,original.webp' | prepend: site.baseurl }}"
+            class="headshot"
+            loading="lazy"
+            decoding="async"
+            sizes="
         (max-width: 50px) 50px,
         (max-width: 150px) 150px,
         (max-width: 200px) 200px,
@@ -21,41 +26,122 @@
         (max-width: 500px) 500px,
         (max-width: 1200px) 800px,
         (max-width: 1201px) 1200px"
-      src="{{'/assets/img/profile-picture/profile,original.webp' | prepend: site.baseurl }}"
-      alt="Portrait of Shinwoo Kim" />
-  </div>
-  <div class="col-sm py-2">
-    <div>
-      <span class="h1 fw-bolder">{{ site.title }}</span>
+            src="{{'/assets/img/profile-picture/profile,original.webp' | prepend: site.baseurl }}"
+            alt="Portrait of Shinwoo Kim"
+        />
     </div>
-    <p>
-      Graduate Student<br />
-      Department of Computer Science<br />
-      School of Computing and Information<br />
-      University of Pittsburgh
-    </p>
-    <p>
-      <a href="mailto:{{ site.email }}" class="text-decoration-none">
-        <i class="fa-solid me-1 fa-envelope"></i> {{ site.email }}
-      </a>
-      <br />
-      <a href="https://{{ site.mastodon.instance }}/@{{ site.mastodon.username }}" class="text-decoration-none">
-        <i class="fa-brands me-1 fa-mastodon"></i> {{ site.mastodon.username }}@{{ site.mastodon.instance }}
-      </a>
-      <br />
-      <a href="https://keybase.io/{{ site.keybase_username }}" class="text-decoration-none">
-        <i class="fa-brands me-1 fa-keybase"></i> {{ site.keybase_username }} &nbsp;
-      </a>
-      <a href="https://github.com/{{ site.github_username }}" class="text-decoration-none">
-        <i class="fa-brands me-1 fa-github"></i> {{ site.github_username }}
-      </a>
-      <br />
-      <a href="https://linkedin.com/in/{{ site.linkedin_username }}" class="text-decoration-none">
-        <i class="fa-brands me-1 fa-linkedin-in"></i> {{ site.linkedin_username }} &nbsp;
-      </a>
-      <a href="https://twitter.com/{{ site.twitter_username }}" class="text-decoration-none">
-        <i class="fa-brands me-1 fa-x-twitter"></i> {{ site.twitter_username }}
-      </a>
-    </p>
-  </div>
+    <div class="col-sm py-2">
+        <div>
+            <span class="h1 fw-bolder">{{ site.title }}</span>
+        </div>
+        <p>
+            Graduate Student<br />
+            Department of Computer Science<br />
+            School of Computing and Information<br />
+            University of Pittsburgh
+        </p>
+        <p>
+            <a href="mailto:{{ site.email }}" class="text-decoration-none">
+                <i class="fa-solid me-1 fa-envelope"></i> {{ site.email }}
+            </a>
+            <br />
+            <a
+                href="https://{{ site.mastodon.instance }}/@{{ site.mastodon.username }}"
+                class="text-decoration-none"
+            >
+                <i class="fa-brands me-1 fa-mastodon"></i> {{
+                site.mastodon.username }}@{{ site.mastodon.instance }}
+            </a>
+            <br />
+            <a
+                href="https://keybase.io/{{ site.keybase_username }}"
+                class="text-decoration-none"
+            >
+                <i class="fa-brands me-1 fa-keybase"></i> {{
+                site.keybase_username }} &nbsp;
+            </a>
+            <a
+                href="https://github.com/{{ site.github_username }}"
+                class="text-decoration-none"
+            >
+                <i class="fa-brands me-1 fa-github"></i> {{ site.github_username
+                }}
+            </a>
+            <br />
+            <a
+                href="https://linkedin.com/in/{{ site.linkedin_username }}"
+                class="text-decoration-none"
+            >
+                <i class="fa-brands me-1 fa-linkedin-in"></i> {{
+                site.linkedin_username }} &nbsp;
+            </a>
+            <a
+                href="https://twitter.com/{{ site.twitter_username }}"
+                class="text-decoration-none"
+            >
+                <i class="fa-brands me-1 fa-x-twitter"></i> {{
+                site.twitter_username }}
+            </a>
+        </p>
+    </div>
 </header>
+
+<!--  -->
+{% elsif layout.header_style == "minimal" %}
+<header class="row">
+    <div class="col-sm text-center">
+        <span class="h1 fw-bolder">{{ site.title }}</span>
+        <p>
+            Graduate Student<br />
+            University of Pittsburgh
+        </p>
+    </div>
+    <div class="col-sm py-2 text-center">
+        <div></div>
+
+        <p>
+            <a href="mailto:{{ site.email }}" class="text-decoration-none">
+                <i class="fa-solid me-1 fa-envelope"></i> {{ site.email }}
+            </a>
+            <br />
+            <a
+                href="https://{{ site.mastodon.instance }}/@{{ site.mastodon.username }}"
+                class="text-decoration-none"
+            >
+                <i class="fa-brands me-1 fa-mastodon"></i> {{
+                site.mastodon.username }}@{{ site.mastodon.instance }}
+            </a>
+            <br />
+            <a
+                href="https://keybase.io/{{ site.keybase_username }}"
+                class="text-decoration-none"
+            >
+                <i class="fa-brands me-1 fa-keybase"></i> {{
+                site.keybase_username }} &nbsp;
+            </a>
+            <a
+                href="https://github.com/{{ site.github_username }}"
+                class="text-decoration-none"
+            >
+                <i class="fa-brands me-1 fa-github"></i> {{ site.github_username
+                }}
+            </a>
+            <br />
+            <a
+                href="https://linkedin.com/in/{{ site.linkedin_username }}"
+                class="text-decoration-none"
+            >
+                <i class="fa-brands me-1 fa-linkedin-in"></i> {{
+                site.linkedin_username }} &nbsp;
+            </a>
+            <a
+                href="https://twitter.com/{{ site.twitter_username }}"
+                class="text-decoration-none"
+            >
+                <i class="fa-brands me-1 fa-x-twitter"></i> {{
+                site.twitter_username }}
+            </a>
+        </p>
+    </div>
+</header>
+{% endif %}
