style: modernize overall scss theme
- minimize header for posts, post layout
- enhance dark mode colors
- improve scss file structure

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -87,61 +87,4 @@
 </header>
 
 <!--  -->
-{% elsif layout.header_style == "minimal" %}
-<header class="row">
-    <div class="col-sm text-center">
-        <span class="h1 fw-bolder">{{ site.title }}</span>
-        <p>
-            Graduate Student<br />
-            University of Pittsburgh
-        </p>
-    </div>
-    <div class="col-sm py-2 text-center">
-        <div></div>
-
-        <p>
-            <a href="mailto:{{ site.email }}" class="text-decoration-none">
-                <i class="fa-solid me-1 fa-envelope"></i> {{ site.email }}
-            </a>
-            <br />
-            <a
-                href="https://{{ site.mastodon.instance }}/@{{ site.mastodon.username }}"
-                class="text-decoration-none"
-            >
-                <i class="fa-brands me-1 fa-mastodon"></i> {{
-                site.mastodon.username }}@{{ site.mastodon.instance }}
-            </a>
-            <br />
-            <a
-                href="https://keybase.io/{{ site.keybase_username }}"
-                class="text-decoration-none"
-            >
-                <i class="fa-brands me-1 fa-keybase"></i> {{
-                site.keybase_username }} &nbsp;
-            </a>
-            <a
-                href="https://github.com/{{ site.github_username }}"
-                class="text-decoration-none"
-            >
-                <i class="fa-brands me-1 fa-github"></i> {{ site.github_username
-                }}
-            </a>
-            <br />
-            <a
-                href="https://linkedin.com/in/{{ site.linkedin_username }}"
-                class="text-decoration-none"
-            >
-                <i class="fa-brands me-1 fa-linkedin-in"></i> {{
-                site.linkedin_username }} &nbsp;
-            </a>
-            <a
-                href="https://twitter.com/{{ site.twitter_username }}"
-                class="text-decoration-none"
-            >
-                <i class="fa-brands me-1 fa-x-twitter"></i> {{
-                site.twitter_username }}
-            </a>
-        </p>
-    </div>
-</header>
-{% endif %}
+{% elsif layout.header_style == "minimal" %} {% endif %}
