--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="preload" href="{{ '/assets/css/main.css' | prepend: site.baseurl }}" as="style"
-        onload="this.onload=null;this.rel='stylesheet'">
+    <link
+      rel="preload"
+      href="{{ '/assets/css/main.css' | prepend: site.baseurl }}"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
     <noscript>
-        <link rel="stylesheet" href="{{ '/assets/css/main.css' | prepend: site.baseurl }}">
+      <link
+        rel="stylesheet"
+        href="{{ '/assets/css/main.css' | prepend: site.baseurl }}"
+      />
     </noscript>
 
     {% seo %}
-    <meta name="google-site-verification" content="e1xnIMrmu01RD3c5tiz0v75hhIJQZciraWGrtxtUYhc" />
-    <link rel="me" href="https://discuss.systems/@shinwoo">
-</head>
+    <meta
+      name="google-site-verification"
+      content="e1xnIMrmu01RD3c5tiz0v75hhIJQZciraWGrtxtUYhc"
+    />
+    <link rel="me" href="https://discuss.systems/@shinwoo" />
+  </head>
 
-<body class="p-3">
-    {% include darkmode_toggle.html %}
-    {% include header.html %}
-    {% include navbar.html %}
-    {{ content }}
-    {% include footer.html %}
-    {% include scripts.html %}
-</body>
-
+  <body class="p-5">
+    {% include darkmode_toggle.html %} {% include header.html %} {% include
+    navbar.html %} {{ content }} {% include footer.html %} {% include
+    scripts.html %}
+  </body>
 </html>
