--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,8 +3,13 @@ layout: default
 header_style: minimal
 ---
 
-<main class="mb-4 p-3 bg-secondary-subtle rounded-3">
+<main class="mb-4 p-3">
+  <div class="mb-4">
     {% for tag in page.tags %}
-    <span class="badge text-bg-info">{{tag}}</span>
-    {% endfor %} {{ content }}
+    <span class="">{{tag}}</span>
+    {% endfor %}
+    <h1 class="post-title mb-0">{{page.title}}</h1>
+    <p class="lead">{{page.subtitle}}</p>
+  </div>
+  {{ content }}
 </main>
