--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,62 +1,14 @@
 ---
 ---
 
+@import "typography_custom";
 @import "boostrap_custom";
 @import "code_highlight";
+@import "layout_custom";
+@import "header_custom";
 
-@media screen and (min-width: 1400px) {
-  body {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 1em;
-  }
-}
-
-@media screen and (min-width: 960px) and (max-width: 1400px) {
-  body {
-    max-width: 75vw;
-    margin: 0 auto;
-    padding: 1em;
-  }
-}
-
-.nav-link-current {
-  text-decoration: underline !important;
-}
-
-/* Autography Font */
-@font-face {
-  font-family: "autography";
-  font-style: normal;
-  font-weight: normal;
-  src: local("autography"), url("../fonts/autography.woff") format("woff");
-}
-
-.autography {
-  font-family: "autography";
-  font-weight: normal;
-}
-
-.headshot {
-  @extend .rounded;
-  @extend .img-fluid;
-}
-
-@media screen and (max-width: 540px) {
-  .headshot {
-    width: 45%;
-  }
-}
-
-@media screen and (min-width: 540px) {
-  .headshot {
-    max-height: 275px;
-    float: right;
-  }
-}
-
-.ratio-letter {
-  --bs-aspect-ratio: calc(110 / 85 * 100%);
+html {
+  scroll-behavior: smooth;
 }
 
 blockquote {
@@ -75,32 +27,40 @@ a:hover {
   @extend .link-underline-opacity-100;
 }
 
+@keyframes fade {
+  from {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fade {
+  from {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.blink {
+  animation: fade 1000ms infinite;
+  -webkit-animation: fade 1000ms infinite;
+}
+
 thead tr th {
   @extend .table-secondary;
 }
 
-html {
-  scroll-behavior: smooth;
-}
-@keyframes fade {
-  from { opacity: 1.0; }
-  50% { opacity: 0.5; }
-  to { opacity: 1.0; }
-}                                                                                                                                                                                                                                  
-
-@-webkit-keyframes fade {
-  from { opacity: 1.0; }
-  50% { opacity: 0.5; }
-  to { opacity: 1.0; }
-}
-
-.blink {
-animation:fade 1000ms infinite;
--webkit-animation:fade 1000ms infinite;
-}
-
-.table-sm {
-  td, th {
-    padding: 0.25em 1em !important;
-  } 
+.table-sm td,
+th {
+  padding: 0.25em 1em !important;
 }
