content: graduated! Bye Pitt :(

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,9 +35,12 @@
             <span class="h1 fw-bolder">{{ site.title }}</span>
         </div>
         <p>
-            Graduate Student<br />
-            Department of Computer Science<br />
-            School of Computing and Information<br />
+            <s>Graduate Student</s> No longer affiliated with
+            <br />
+            Department of Computer Science
+            <br />
+            School of Computing and Information
+            <br />
             University of Pittsburgh
         </p>
         <p>
