content: joining the military

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,13 +35,11 @@
             <span class="h1 fw-bolder">{{ site.title }}</span>
         </div>
         <p>
-            <s>Graduate Student</s> No longer affiliated with
+            <s>Software Engineer</s>
             <br />
-            Department of Computer Science
+            Enlisted Soldier
             <br />
-            School of Computing and Information
-            <br />
-            University of Pittsburgh
+            Army, Republic of Korea
         </p>
         <p>
             <a href="mailto:{{ site.email }}" class="text-decoration-none">
