--- a/_sass/_header_custom.scss
+++ b/_sass/_header_custom.scss
@@ -19,3 +19,12 @@
 .nav-link-current {
   font-weight: bolder;
 }
+
+.navbar-toggler,
+.navbar-toggler:focus,
+.navbar-toggler:active,
+.navbar-toggler-icon:focus {
+    outline: none;
+    border: none;
+    box-shadow: none;
+}
