--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,59 +8,65 @@
 @import "header_custom";
 
 html {
-  scroll-behavior: smooth;
+    scroll-behavior: smooth;
 }
 
 blockquote {
-  margin: 0;
-  padding: 0 1em;
-  border-left: 0.25em solid;
+    margin: 0;
+    padding: 0 1em;
+    border-left: 0.25em solid;
 }
 
 a {
-  @extend .text-body;
-  @extend .link-underline-opacity-25;
+    @extend .text-body;
+    @extend .link-underline-opacity-25;
+    text-underline-position: under;
 }
 
 a:hover {
-  @extend .text-secondary;
-  @extend .link-underline-opacity-100;
+    @extend .text-secondary;
+    @extend .link-underline-opacity-100;
+    text-underline-position: under;
 }
 
 @keyframes fade {
-  from {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0.5;
-  }
-  to {
-    opacity: 1;
-  }
+    from {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.5;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 @-webkit-keyframes fade {
-  from {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0.5;
-  }
-  to {
-    opacity: 1;
-  }
+    from {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.5;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 .blink {
-  animation: fade 1000ms infinite;
-  -webkit-animation: fade 1000ms infinite;
+    animation: fade 1000ms infinite;
+    -webkit-animation: fade 1000ms infinite;
 }
 
 thead tr th {
-  @extend .table-secondary;
+    @extend .table-secondary;
 }
 
 .table-sm td,
 th {
-  padding: 0.25em 1em !important;
+    padding: 0.25em 1em !important;
+}
+
+table {
+    @extend .table;
 }
