style: add new favicon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,27 @@
             content="e1xnIMrmu01RD3c5tiz0v75hhIJQZciraWGrtxtUYhc"
         />
         <link rel="me" href="https://discuss.systems/@shinwoo" />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="{% link /assets/favicon/apple-touch-icon.png %}"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="{% link /assets/favicon/favicon-32x32.png %}"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="{% link /assets/favicon/favicon-16x16.png %}"
+        />
+        <link
+            rel="manifest"
+            href="{% link /assets/favicon/site.webmanifest %}"
+        />
     </head>
     <body class="p-3">
         <!-- Begin Header -->
