--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,91 +1,147 @@
 {% if layout.header_style == "full" %}
-<header class="row">
-    <div class="col-sm mb-sm-0">
-        <img
-            srcset="
-        {{ '/assets/img/profile-picture/profile-50w.avif 50w' | prepend:site.baseurl }},
-        {{ '/assets/img/profile-picture/profile-150w.avif 150w' | prepend:site.baseurl }},
-        {{ '/assets/img/profile-picture/profile-200w.avif 200w' | prepend:site.baseurl }},
-        {{ '/assets/img/profile-picture/profile-300w.avif 300w' | prepend:site.baseurl }},
-        {{ '/assets/img/profile-picture/profile-350w.avif 350w' | prepend:site.baseurl }},
-        {{ '/assets/img/profile-picture/profile-400w.avif 400w' | prepend:site.baseurl }},
-        {{ '/assets/img/profile-picture/profile-500w.avif 500w' | prepend:site.baseurl }},
-        {{ '/assets/img/profile-picture/profile-800w.avif 800w' | prepend:site.baseurl }},
-        {{ '/assets/img/profile-picture/profile,original.webp 1200w' | prepend: site.baseurl }}"
-            src="{{'/assets/img/profile-picture/profile,original.webp' | prepend: site.baseurl }}"
-            class="headshot"
-            loading="lazy"
-            decoding="async"
-            sizes="
-        (max-width: 50px) 50px,
-        (max-width: 150px) 150px,
-        (max-width: 200px) 200px,
-        (max-width: 300px) 300px,
-        (max-width: 350px) 350px,
-        (max-width: 400px) 400px,
-        (max-width: 500px) 500px,
-        (max-width: 1200px) 800px,
-        (max-width: 1201px) 1200px"
-            src="{{'/assets/img/profile-picture/profile,original.webp' | prepend: site.baseurl }}"
-            alt="Portrait of Shinwoo Kim"
-        />
-    </div>
-    <div class="col-sm py-2">
-        <div>
-            <span class="h1 fw-bolder">{{ site.title }}</span>
+<header>
+    <div class="row">
+        <div class="col mb-sm-0">
+            <img
+                srcset="
+                {{ '/assets/img/profile-picture/profile-50w.avif 50w' | prepend:site.baseurl }},
+                {{ '/assets/img/profile-picture/profile-150w.avif 150w' | prepend:site.baseurl }},
+                {{ '/assets/img/profile-picture/profile-200w.avif 200w' | prepend:site.baseurl }},
+                {{ '/assets/img/profile-picture/profile-300w.avif 300w' | prepend:site.baseurl }},
+                {{ '/assets/img/profile-picture/profile-350w.avif 350w' | prepend:site.baseurl }},
+                {{ '/assets/img/profile-picture/profile-400w.avif 400w' | prepend:site.baseurl }},
+                {{ '/assets/img/profile-picture/profile-500w.avif 500w' | prepend:site.baseurl }},
+                {{ '/assets/img/profile-picture/profile-800w.avif 800w' | prepend:site.baseurl }},
+                {{ '/assets/img/profile-picture/profile,original.webp 1200w' | prepend: site.baseurl }}"
+                src="{{'/assets/img/profile-picture/profile,original.webp' | prepend: site.baseurl }}"
+                class="headshot float-md-end"
+                loading="lazy"
+                decoding="async"
+                sizes="
+                (max-width: 50px) 50px,
+                (max-width: 150px) 150px,
+                (max-width: 200px) 200px,
+                (max-width: 300px) 300px,
+                (max-width: 350px) 350px,
+                (max-width: 400px) 400px,
+                (max-width: 500px) 500px,
+                (max-width: 1200px) 800px,
+                (max-width: 1201px) 1200px"
+                src="{{'/assets/img/profile-picture/profile,original.webp' | prepend: site.baseurl }}"
+                alt="Portrait of Shinwoo Kim"
+            />
         </div>
-        <p>
-            <s>Software Engineer</s>
-            <br />
-            Enlisted Soldier
-            <br />
-            Army, Republic of Korea
-        </p>
-        <p>
-            <a href="mailto:{{ site.email }}" class="text-decoration-none">
-                <i class="fa-solid me-1 fa-envelope"></i> {{ site.email }}
-            </a>
-            <br />
-            <a
-                href="https://{{ site.mastodon.instance }}/@{{ site.mastodon.username }}"
-                class="text-decoration-none"
-            >
-                <i class="fa-brands me-1 fa-mastodon"></i> {{
-                site.mastodon.username }}@{{ site.mastodon.instance }}
-            </a>
-            <br />
-            <a
-                href="https://keybase.io/{{ site.keybase_username }}"
-                class="text-decoration-none"
-            >
-                <i class="fa-brands me-1 fa-keybase"></i> {{
-                site.keybase_username }} &nbsp;
-            </a>
-            <a
-                href="https://github.com/{{ site.github_username }}"
-                class="text-decoration-none"
-            >
-                <i class="fa-brands me-1 fa-github"></i> {{ site.github_username
-                }}
-            </a>
-            <br />
-            <a
-                href="https://linkedin.com/in/{{ site.linkedin_username }}"
-                class="text-decoration-none"
-            >
-                <i class="fa-brands me-1 fa-linkedin-in"></i> {{
-                site.linkedin_username }} &nbsp;
-            </a>
-            <a
-                href="https://twitter.com/{{ site.twitter_username }}"
-                class="text-decoration-none"
-            >
-                <i class="fa-brands me-1 fa-x-twitter"></i> {{
-                site.twitter_username }}
-            </a>
-        </p>
+        <div class="col-6 py-md mt-3 mt-md-0">
+            <h1>{{ site.title }}</h1>
+            <p>
+                {{ site.header_info.job_title }}
+                <br />
+                {{ site.header_info.company }}
+                <br />
+            </p>
+            <p class="d-none d-sm-block">
+                <a href="mailto:{{ site.email }}" class="text-decoration-none">
+                    <i class="fa-solid me-1 fa-envelope"></i>
+                    <code class="font-monospace">{{ site.email }}</code>
+                </a>
+                <br />
+                <a
+                    href="https://{{ site.mastodon.instance }}/@{{ site.mastodon.username }}"
+                    class="text-decoration-none"
+                >
+                    <i class="fa-brands me-1 fa-mastodon"></i>
+                    <code class="font-monospace">
+                        {{ site.mastodon.username }}@{{ site.mastodon.instance
+                        }}
+                    </code>
+                </a>
+                <br />
+                <a
+                    href="https://keybase.io/{{ site.keybase_username }}"
+                    class="text-decoration-none"
+                >
+                    <i class="fa-brands me-1 fa-keybase"></i>
+                    <code class="font-monospace">
+                        {{ site.keybase_username }}
+                    </code>
+                </a>
+                <a
+                    href="https://github.com/{{ site.github_username }}"
+                    class="text-decoration-none"
+                >
+                    <i class="fa-brands me-1 fa-github"></i>
+                    <code class="font-monospace">
+                        {{ site.github_username }}
+                    </code>
+                </a>
+                <br />
+                <a
+                    href="https://linkedin.com/in/{{ site.linkedin_username }}"
+                    class="text-decoration-none"
+                >
+                    <i class="fa-brands me-1 fa-linkedin-in"></i>
+                    <code class="font-monospace">
+                        {{ site.linkedin_username }}
+                    </code>
+                </a>
+                <a
+                    href="https://twitter.com/{{ site.twitter_username }}"
+                    class="text-decoration-none"
+                >
+                    <i class="fa-brands me-1 fa-x-twitter"></i>
+                    <code class="font-monospace">
+                        {{ site.twitter_username }}
+                    </code>
+                </a>
+            </p>
+        </div>
     </div>
+    <p class="d-sm-none">
+        <a href="mailto:{{ site.email }}" class="text-decoration-none">
+            <i class="fa-solid me-1 fa-envelope"></i>
+            <code class="font-monospace"> {{ site.email }} </code>
+        </a>
+        <br />
+        <a
+            href="https://{{ site.mastodon.instance }}/@{{ site.mastodon.username }}"
+            class="text-decoration-none"
+        >
+            <i class="fa-brands me-1 fa-mastodon"></i>
+            <code class="font-monospace">
+                {{ site.mastodon.username }}@{{ site.mastodon.instance }}
+            </code>
+        </a>
+        <br />
+        <a
+            href="https://keybase.io/{{ site.keybase_username }}"
+            class="text-decoration-none"
+        >
+            <i class="fa-brands me-1 fa-keybase"></i>
+            <code class="font-monospace"> {{ site.keybase_username }} </code>
+        </a>
+        <a
+            href="https://github.com/{{ site.github_username }}"
+            class="text-decoration-none"
+        >
+            <i class="fa-brands me-1 fa-github"></i>
+            <code class="font-monospace"> {{ site.github_username }} </code>
+        </a>
+        <br />
+        <a
+            href="https://linkedin.com/in/{{ site.linkedin_username }}"
+            class="text-decoration-none"
+        >
+            <i class="fa-brands me-1 fa-linkedin-in"></i>
+            <code class="font-monospace"> {{ site.linkedin_username }} </code>
+        </a>
+        <a
+            href="https://twitter.com/{{ site.twitter_username }}"
+            class="text-decoration-none"
+        >
+            <i class="fa-brands me-1 fa-x-twitter"></i>
+            <code class="font-monospace"> {{ site.twitter_username }} </code>
+        </a>
+    </p>
 </header>
 
-<!--  -->
 {% elsif layout.header_style == "minimal" %} {% endif %}
